Fix width and alignment

--- a/projects/commudle-admin/src/app/feature-modules/public-events/components/agenda/agenda.component.scss
+++ b/projects/commudle-admin/src/app/feature-modules/public-events/components/agenda/agenda.component.scss
@@ -11,7 +11,7 @@ nb-card-body h6 {
   display: flex;
   flex-wrap: nowrap;
   overflow-x: auto;
-  max-width: 677.53px;
+  max-width: 719px;
 
   nb-card {
     width: 250px;
