--- a/projects/commudle-admin/src/app/feature-modules/public-events/components/agenda/event-location-tracks/event-location-tracks.component.scss
+++ b/projects/commudle-admin/src/app/feature-modules/public-events/components/agenda/event-location-tracks/event-location-tracks.component.scss
@@ -1,4 +1,6 @@
 .event-location-tracks {
+  max-width: 719px;
+
   .track-container {
     .track-name {
       display: inline-block;
